Center using grid to avoid blurry text in filter

--- a/src/ui/styles/_content.scss
+++ b/src/ui/styles/_content.scss
@@ -4,7 +4,7 @@
 	grid-template-columns: 1fr 1fr;
 	gap: $gutter;
 	margin: 0 auto;
-	padding: 8vh $gutter;
+	padding: 6vh $gutter;
 	width: 100%;
 	max-width: $maxWidth;
 
