--- a/src/ui/styles/_filter.scss
+++ b/src/ui/styles/_filter.scss
@@ -2,23 +2,29 @@
 
 	position: fixed;
 	display: grid;
-	grid-auto-flow: column;
-	gap: $gutter;
+	justify-content: center;
+	width: 100%;
 	bottom: 4vh;
-	left: 50%;
-	padding: 0 $gutter*1.5;
-	border-radius: 100px;
-	background: rgba($context, .98);
-	transform: translateX(-50%);
 	z-index: 2;
-
-	@supports (backdrop-filter: blur(10px)) {
-		background: $context;
-		backdrop-filter: blur(10px);
-	}
+	pointer-events: none;
 
 	@media (max-width: 800px) {
 		font-size: .9em;
+	}
+
+	&__bar {
+		display: grid;
+		grid-auto-flow: column;
+		gap: $gutter;
+		padding: 0 $gutter*1.5;
+		border-radius: 100px;
+		background: rgba($context, .98);
+		pointer-events: all;
+
+		@supports (backdrop-filter: blur(10px)) {
+			background: $context;
+			backdrop-filter: blur(10px);
+		}
 	}
 
 	&__button {
